Skill Section Mobile Responsive Fixed

--- a/css/style.css
+++ b/css/style.css
@@ -110,7 +110,7 @@ html {
 
 @media (max-width: 599px) {
   .main-content .section-dark.skills {
-    padding: 75px 20px;
+    padding: 75px 140px;
   }
 }
 
